--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <title>Todo App</title>
+  <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
+  <link rel="stylesheet" href="style.css" media="screen">
 </head>
 <body>
 <div class="aaa">
@@ -44,6 +45,6 @@
     </li>
   </ul>
 </div>
-<script type="text/javascript" SRC="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
