--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="aaa">
-  <img src="./eisenhower-matrix.jpg">
+  <img src="./eisenhower-matrix.jpg" alt="matrix">
   <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">
     Want more details&quest;
   </a>
@@ -32,7 +32,7 @@
       <label class="task">Go Shopping</label>
       <input type="text" value="Go Shopping" class="task">
       <button class="edit">Save</button>
-      <button class="delete"><img src="./remove.svg"></button>
+      <button class="delete"><img src="./remove.svg" alt="close"></button>
     </li>
   </ul>
   <h3>Completed</h3>
@@ -41,7 +41,7 @@
       <label class="task">See the Doctor</label>
       <input type="text" class="task">
       <button class="edit">Edit</button>
-      <button class="delete"><img src="./remove.svg"></button>
+      <button class="delete"><img src="./remove.svg" alt="close"></button>
     </li>
   </ul>
 </div>
