--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </a>
 </div>
 <div class="centered-main-page-element">
-  <p id="topSectionForAddingElementToList">
-    <label for="new-task">Add Item</label>
+  <p id="topSectionForAddingElementToList"></p>
+  <label for="new-task">Add Item</label>
   <div class="task-row-wrapper">
     <input id="new-task"
            class="task"
@@ -23,7 +23,6 @@
     >
     <button>Add</button>
   </div>
-  </p>
   <h3>Todo</h3>
   <ul id="incompleteTasks">
     <li>
