refactor: adjust HTML-formatting according to rule 3.5 and 3.6 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="style.css" media="screen">
 </head>
 <body>
-<div class="aaa">
-  <img src="./eisenhower-matrix.jpg" alt="matrix">
-  <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+<header class="header">
+  <img class="header__image" src="./eisenhower-matrix.jpg" alt="matrix">
+  <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">
     Want more details&quest;
   </a>
-</div>
-<div class="centered-main-page-element">
+</header>
+<main class="centered-main-page-element">
   <p id="topSectionForAddingElementToList"></p>
   <label for="new-task">Add Item</label>
   <div class="task-row-wrapper">
@@ -61,7 +61,9 @@
       </button>
     </li>
   </ul>
-</div>
-<script src="app.js"></script>
+</main>
+<footer>
+  <script src="app.js"></script>
+</footer>
 </body>
 </html>
