--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Want more details&quest;
   </a>
 </header>
-<main class="centered-main-page-element">
+<main class="wrapper">
   <p id="topSectionForAddingElementToList"></p>
   <label for="new-task">Add Item</label>
   <div class="task-row-wrapper">
