--- a/index.html
+++ b/index.html
@@ -13,54 +13,92 @@
     Want more details&quest;
   </a>
 </header>
-<main class="wrapper">
-  <p id="topSectionForAddingElementToList"></p>
-  <label for="new-task">Add Item</label>
-  <div class="task-row-wrapper">
-    <input id="new-task"
-           class="task"
-           type="text"
-    >
-    <button>Add</button>
+<main>
+  <div class="wrapper">
+    <section class="new__task_form">
+      <label
+              for="new__task"
+              class="new__task_label"
+      >
+        Add Item
+      </label>
+      <div class="new__task_wrapper">
+        <input
+                id="new__task"
+                class="new__task"
+                type="text"
+        >
+        <button class="new__task_btn">Add</button>
+      </div>
+    </section>
+
+    <section class="uncompleted__todos">
+      <article><h3>Todo</h3></article>
+      <ul id="uncompleted__tasks">
+        <li class="uncompleted__task">
+          <input
+                  class="task__checkbox"
+                  type="checkbox"
+          >
+          <label class="task__label">Pay Bills</label>
+          <input
+                  class="task__text"
+                  type="text"
+          >
+          <button class="task__edit">Edit</button>
+          <button class="task__delete">
+            <img
+                    class="close__image"
+                    src="./remove.svg"
+                    alt="close"
+            >
+          </button>
+        </li>
+        <li class="uncompleted__task edit_mode">
+          <input
+                  class="task__checkbox"
+                  type="checkbox"
+          >
+          <label class="task__label">Go Shopping</label>
+          <input
+                  type="text"
+                  value="Go Shopping"
+                  class="task__text"
+          >
+          <button class="task__edit">Save</button>
+          <button class="task__delete">
+            <img
+                    src="./remove.svg"
+                    alt="close"
+            >
+          </button>
+        </li>
+      </ul>
+    </section>
+    <section class="completed__todos">
+      <article><h3>Completed</h3></article>
+      <ul id="completed__tasks">
+        <li class="completed__task">
+          <input
+                  class="task__checkbox"
+                  type="checkbox"
+                  checked
+          >
+          <label class="task">See the Doctor</label>
+          <input
+                  type="text"
+                  class="task__label"
+          >
+          <button class="task__edit">Edit</button>
+          <button class="task__delete">
+            <img
+                    src="./remove.svg"
+                    alt="close">
+          </button>
+        </li>
+      </ul>
+    </section>
   </div>
-  <h3>Todo</h3>
-  <ul id="incompleteTasks">
-    <li>
-      <input type="checkbox">
-      <label class="task">Pay Bills</label>
-      <input type="text">
-      <button class="edit">Edit</button>
-      <button class="delete">
-        <img src="./remove.svg" alt="close">
-      </button>
-    </li>
-    <li class="editMode">
-      <input type="checkbox">
-      <label class="task">Go Shopping</label>
-      <input type="text"
-             value="Go Shopping"
-             class="task"
-      >
-      <button class="edit">Save</button>
-      <button class="delete">
-        <img src="./remove.svg" alt="close">
-      </button>
-    </li>
-  </ul>
-  <h3>Completed</h3>
-  <ul id="completed-tasks">
-    <li>
-      <input type="checkbox" checked>
-      <label class="task">See the Doctor</label>
-      <input type="text"
-             class="task"
-      >
-      <button class="edit">Edit</button>
-      <button class="delete">
-        <img src="./remove.svg" alt="close">
-      </button>
-    </li>
-  </ul>
 </main>
 <footer>
   <script src="app.js"></script>
