refactor: structurize project

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <title>Todo App</title>
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="style.css" media="screen">
+  <link rel="stylesheet" href="assets/styles/style.css" media="screen">
 </head>
 <body>
 <header class="header">
-  <img class="header__image" src="./eisenhower-matrix.jpg" alt="matrix">
+  <img class="header__image" src="assets/images/eisenhower-matrix.jpg" alt="matrix">
   <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">
     Want more details&quest;
   </a>
@@ -49,7 +49,7 @@
           <button class="task__delete">
             <img
                     class="close__image"
-                    src="./remove.svg"
+                    src="assets/icons/remove.svg"
                     alt="close"
             >
           </button>
@@ -68,7 +68,7 @@
           <button class="task__edit">Save</button>
           <button class="task__delete">
             <img
-                    src="./remove.svg"
+                    src="assets/icons/remove.svg"
                     alt="close"
             >
           </button>
@@ -92,7 +92,7 @@
           <button class="task__edit">Edit</button>
           <button class="task__delete">
             <img
-                    src="./remove.svg"
+                    src="assets/icons/remove.svg"
                     alt="close">
           </button>
         </li>
@@ -101,7 +101,7 @@
   </div>
 </main>
 <footer>
-  <script src="app.js"></script>
+  <script src="assets/scripts/app.js"></script>
 </footer>
 </body>
 </html>
