--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header class="header">
   <img class="header__image" src="assets/images/eisenhower-matrix.jpg" alt="matrix">
   <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">
-    Want more details&quest;
+    Want more details?
   </a>
 </header>
 <main>
