fix: fix article

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     </section>
 
     <section class="uncompleted__todos">
-      <article><h3>Todo</h3></article>
+      <article class="uncompleted__todos_article">
+        <h3>Todo</h3>
+      </article>
       <ul id="uncompleted__tasks">
         <li class="uncompleted__task">
           <input
@@ -76,7 +78,9 @@
       </ul>
     </section>
     <section class="completed__todos">
-      <article><h3>Completed</h3></article>
+      <article class="completed__todos_article">
+        <h3>Completed</h3>
+      </article>
       <ul id="completed__tasks">
         <li class="completed__task">
           <input
