fix: fix issues

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header class="header">
   <img class="header__image" src="assets/images/eisenhower-matrix.jpg" alt="matrix">
   <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">
-    Want more details&quest;
+    Want more details?
   </a>
 </header>
 <main>
@@ -79,22 +79,23 @@
       <article><h3>Completed</h3></article>
       <ul id="completed__tasks">
         <li class="completed__task">
-          <input
-                  class="task__checkbox"
-                  type="checkbox"
-                  checked
-          >
-          <label class="task">See the Doctor</label>
-          <input
-                  type="text"
-                  class="task__label"
-          >
-          <button class="task__edit">Edit</button>
-          <button class="task__delete">
-            <img
-                    src="assets/icons/remove.svg"
-                    alt="close">
-          </button>
+            <input
+                    class="task__checkbox"
+                    type="checkbox"
+            >
+            <label class="task__label">See the Doctor</label>
+            <input
+                    class="task__text"
+                    type="text"
+            >
+            <button class="task__edit">Edit</button>
+            <button class="task__delete">
+                <img
+                        class="close__image"
+                        src="assets/icons/remove.svg"
+                        alt="close"
+                >
+            </button>
         </li>
       </ul>
     </section>
