refactor: adjust HTML-formatting according to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
     </section>
 
     <section class="uncompleted__todos">
-      <article class="uncompleted__todos_article">
-        <h3>Todo</h3>
-      </article>
+      <article><h3>Todo</h3></article>
       <ul id="uncompleted__tasks">
         <li class="uncompleted__task">
           <input
@@ -78,14 +76,13 @@
       </ul>
     </section>
     <section class="completed__todos">
-      <article class="completed__todos_article">
-        <h3>Completed</h3>
-      </article>
+      <article><h3>Completed</h3></article>
       <ul id="completed__tasks">
         <li class="completed__task">
             <input
                     class="task__checkbox"
                     type="checkbox"
+                    checked
             >
             <label class="task__label">See the Doctor</label>
             <input
