--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Todo App</title>
   <meta charset="utf-8">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles/style.css" media="screen">
 </head>
 <body>
