--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
   </a>
 </header>
 <main>
-  <div class="wrapper">
-    <section class="new__task_form">
+  <div class="todos wrapper">
+    <section class="todos__section task-form">
       <label
-              for="new__task"
-              class="new__task_label"
+              for="task-form__new-input"
+              class="task-form__new-label"
       >
         Add Item
       </label>
-      <div class="new__task_wrapper">
+      <div class="task-form__new-wrapper">
         <input
-                id="new__task"
-                class="new__task"
+                id="task-form__new-input"
+                class="task-form__new-input"
                 type="text"
         >
-        <button class="new__task_btn">Add</button>
+        <button class="task-form__new-button">Add</button>
       </div>
     </section>
 
-    <section class="uncompleted__todos">
+    <section class="todos__section uncompleted-todos">
       <article><h3>Todo</h3></article>
-      <ul id="uncompleted__tasks">
-        <li class="uncompleted__task">
+      <ul id="uncompleted-tasks">
+        <li class="uncompleted-tasks__task">
           <input
                   class="task__checkbox"
                   type="checkbox"
@@ -54,7 +54,7 @@
             >
           </button>
         </li>
-        <li class="uncompleted__task edit_mode">
+        <li class="uncompleted-tasks__task edit_mode">
           <input
                   class="task__checkbox"
                   type="checkbox"
@@ -75,10 +75,10 @@
         </li>
       </ul>
     </section>
-    <section class="completed__todos">
+    <section class="todos__section completed-todos">
       <article><h3>Completed</h3></article>
-      <ul id="completed__tasks">
-        <li class="completed__task">
+      <ul id="completed-tasks">
+        <li class="completed-tasks__task">
             <input
                     class="task__checkbox"
                     type="checkbox"
