--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <button class="task__edit">Edit</button>
           <button class="task__delete">
             <img
-                    class="close__image"
+                    class="task__delete-image"
                     src="assets/icons/remove.svg"
                     alt="close"
             >
@@ -68,6 +68,7 @@
           <button class="task__edit">Save</button>
           <button class="task__delete">
             <img
+                    class="task__delete-image"
                     src="assets/icons/remove.svg"
                     alt="close"
             >
@@ -92,7 +93,7 @@
           <button class="task__edit">Edit</button>
           <button class="task__delete">
             <img
-                    class="close__image"
+                    class="task__delete-image"
                     src="assets/icons/remove.svg"
                     alt="close"
             >
